--- a/美团项目/css/index.css
+++ b/美团项目/css/index.css
@@ -2,12 +2,14 @@ body{
     background-color: rgb(248,248,248);
 }
 .topnav{
+    float: left;
     background-color: rgb(248,248,248);
     height: 50px;
     width: 100%
     
 }
 .container{
+    
     width: 1190px;
     height: 50px;
     margin:0 auto
@@ -16,7 +18,7 @@ body{
 .container-left{
     float: left;
   line-height: 50px;
-  width: 280px; ;
+  width: 310px; ;
 }
 .container-left a{
     color: rgb(153,153,153);
@@ -60,27 +62,39 @@ body{
     width: 1190px;
     height: 200px;
     margin:0 auto;
-    background-color: thistle;
+    
 }
-.head-container-left img{
+.head-container-left{
     float: left;
-    position: relative;
-    right: 280px;
-    top: 30px;
 }
 .head-container-input{
-    width: 650px;
+    float: left;
+    width: 585px;
     height: 45px;
-    background-color: brown;
+    margin-left: 150px;
+    margin-top: 25px;
+    border: 1px solid #ccc;
+   
+}
+.head-container-left img{
+    margin-top:20px ;
+}
+.head-container-text{
+    color: rgb(153,153,153);
+    font-size: 16px;
+    line-height: 45px;
+}
+.head-container-text input{
+    width: 390px;
+    height: 44px;
+    border: none;
+}
+.head-container-input button{
+    background-color: rgb(255,195,0);
+    width: 80px;
+    height: 46px;
+    border: none;
     position: relative;
-    left: 30px;
-    top: 25px;
-}
-.head-container-text span{
-color: rgb(153,153,153);
-font-size: 17px;
-}
-.head-container-text button{
- background-color: rgb(255,195,0);
- border: ;
+    bottom: 46px;
+    left: 506px;
 }
