--- a/美团项目/fonts/搜索/iconfont.css
+++ b/美团项目/fonts/搜索/iconfont.css
@@ -7,6 +7,7 @@
       url('iconfont.ttf') format('truetype'),
       url('iconfont.svg#iconfont') format('svg');
 }
+
 .iconfont {
   font-family: "iconfont" !important;
   font-size: 16px;
@@ -15,15 +16,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-weibo:before {
-  content: "\e63d";
-}
-
-.icon-weixin:before {
-  content: "\e659";
-}
-
-.icon-xiaochengxu:before {
-  content: "\e63c";
+.icon-search-2-copy:before {
+  content: "\e615";
 }
 
