--- a/美团项目/css/index.css
+++ b/美团项目/css/index.css
@@ -1,100 +1,167 @@
-body{
-    background-color: rgb(248,248,248);
+/* 顶部导航栏 */
+.topnav {
+  background-color: rgb(248, 248, 248);
+  width: 100%;
+  height: 40px;
 }
-.topnav{
-    float: left;
-    background-color: rgb(248,248,248);
-    height: 50px;
-    width: 100%
-    
+/* 左边浮动 */
+.topnav-left {
+  float: left;
 }
-.container{
-    
-    width: 1190px;
-    height: 50px;
-    margin:0 auto
-   
+/* 左边定位图标 */
+.topnav-left img {
+  float: left;
+  margin-top: 10px;
+  height: 16px;
 }
-.container-left{
-    float: left;
-  line-height: 50px;
-  width: 310px; ;
+/* 左边文字 */
+.topnav-left span {
+  float: left;
+  line-height: 40px;
+  color: rgb(102, 102, 102);
+  margin-right: 5px;
 }
-.container-left a{
-    color: rgb(153,153,153);
-    font-size: 13px;
+/* 左边文字 */
+.topnav-left a {
+  float: left;
+  line-height: 40px;
+  color: #999999;
+  margin: 0 3px;
 }
-.container-left a:hover{
-    color: rgb(254,140,0);
+/* 选中元素 */
+.topnav-left a:nth-child(3) {
+    margin-top: 13px;
+    margin-right: 5px;
+  line-height: 1em;
+  height: 1em;
+  color: rgb(102, 102, 102);
+  border: 1px solid rgb(229, 229, 229);
 }
-.container-left a:nth-child(3){
-    color: rgb(102,102,102);
- border:1px solid rgb(229,229,229)
- 
+/* 左浮动 */
+.topnav-left-size {
+  float: left;
 }
-.container-left span{
-    color: rgb(102,102,102);
-    font-size: 14spx;
+/* 右浮动 */
+.topnav-right {
+  float: right;
+  line-height: 40px;
 }
-.container-right{
-    float:right;
+/* 右边文字 */
+.topnav-right a {
+  float: left;
+  color: #999999;
+  margin: 0 15px;
 }
-.container-right li{
-    float: left;
-    margin: 0 15px;
-    line-height: 50px;
-   
+/* 整体a的hover效果 */
+.topnav a:hover{
+color: rgb(254,140,0);
 }
-.container-right li a{
-    color: rgb(153,153,153);
-    font-size: 13px;
+/* 选中元素 */
+.topnav-left-size a:nth-child(1){
+color: rgb(254,140,0);
+margin-left: 30px;
 }
-.container-right ul li a:hover{
-  color: rgb(254,140,0);;
+/* 第二部分 搜索导航 */
+.searchnav{
+  height: 200px;
+  background-color: white;
+}
+/* 搜索栏左边 */
+.searchnav-left{
+  float: left;
+}
+/* 搜索栏左边图片 */
+.searchnav-left img{
+  float: left;
+  width: 126px;
+  height: 46px;
+  margin-top:35px;
 }
 /* 搜索框 */
-.head{
-    width: 100%;
-    height: 200px;
-    background-color: white;
+.searchnav-search{
+  float: left;
+  width: 550px;
+  height: 40px;
+  border: 1px solid rgb(229,229,229);
+  margin-top: 40px;
+  margin-left: 195px;
 }
-.head-container{
-    width: 1190px;
-    height: 200px;
-    margin:0 auto;
-    
+/* 输入框左浮动 */
+.searchnav-input{
+  float: left;  
 }
-.head-container-left{
-    float: left;
+/* 输入框 */
+.searchnav-input input{
+  float: left;
+  width: 470px;
+  height: 40px;
+  border: none;
+  box-sizing: border-box;
+  padding: 15px;
+  font-size: 15px;
+  color: black;
 }
-.head-container-input{
-    float: left;
-    width: 585px;
-    height: 45px;
-    margin-left: 150px;
-    margin-top: 25px;
-    border: 1px solid #ccc;
-   
+/* 输入框文字 */
+.searchnav-input ::placeholder{
+  color: rgb(153,153,153);
 }
-.head-container-left img{
-    margin-top:20px ;
+/* 按钮 */
+.searchnav-search button{
+  float: right;
+  background-color: rgb(255,195,0);
+  border: none;
+  width: 80px;
+  height: 40px
+  
+ 
 }
-.head-container-text{
-    color: rgb(153,153,153);
-    font-size: 16px;
-    line-height: 45px;
+/* 热门搜索词 */
+.searchnav-hotkeys{
+ float: left;
+ margin-left: 335px;
+ font-size: 13px;
+ margin-top: 10px;
 }
-.head-container-text input{
-    width: 390px;
-    height: 44px;
-    border: none;
+/* 热门搜索词 */
+.searchnav-hotkeys a{
+margin-right: 10px;
+color: rgb(153,153,153);
 }
-.head-container-input button{
-    background-color: rgb(255,195,0);
-    width: 80px;
-    height: 46px;
-    border: none;
-    position: relative;
-    bottom: 46px;
-    left: 506px;
+/* 热门搜索词hover效果 */
+.searchnav-hotkeys a:hover{
+  color: rgb(254,140,0);
+}
+/* 美团功能 */
+.searchnav-bottom{
+  float: left;
+ margin-left: 280px;
+ margin-top: 60px;
+ font-size: 18px;
+}
+/* 美团功能文字 */
+.searchnav-bottom a{
+  float: left;
+  font-weight: 700;
+  margin-right: 32px;
+ 
+
+}
+/* 美团功能hover效果 */
+.searchnav-bottom a:nth-child(1):hover{
+  color: rgb(251,199,82);
+}
+.searchnav-bottom a:nth-child(2):hover{
+  color: rgb(237,30,36);
+}
+.searchnav-bottom a:nth-child(3):hover{
+  color: rgb(237,30,36);
+}
+.searchnav-bottom a:nth-child(4):hover{
+  color: rgb(251,199,82);
+}
+.searchnav-bottom a:nth-child(5):hover{
+  color:rgb(254,140,0);
+}
+.searchnav-bottom a:nth-child(6):hover{
+  color: rgb(237,30,36);
 }
