--- a/小米官网/css/index.css
+++ b/小米官网/css/index.css
@@ -250,6 +250,7 @@ top:15px;
  }
  .big-box{
     background-color: rgb(245,245,245);
+    height: 4000px;
  }
  .falsh{
      height: 400px;
@@ -325,6 +326,7 @@ margin-bottom: 30px;
   color: rgb(96,87,81);
     font-size: 15px;
 }
+
 .htoshop{
     float: right;
     width: calc(1226px - 234px)
@@ -365,15 +367,12 @@ text-align: center;
     font-size: 16px;
     color: rgb(178,178,178);
 }
-.background-phone{
+.background-phone {
     background-color: rgb(245,245,245);
     margin-top: 25px;
     margin-bottom: 40px;
 }
-.background-phone img{
-    width: 100%;
-    height: 120px;
-}
+
 .phonenav-area{
     height: 655px;
 }
@@ -393,6 +392,7 @@ text-align: center;
     line-height: 45px;
     font-size: 15px;
 }
+
 .phonenav-title a:nth-child(2){
     width:13px;
     height: 12px;
@@ -404,24 +404,345 @@ text-align: center;
     background-color:rgb(176,176,176) ;
     color: white;
 }
+.home-area-left,
 .phonenav-left{
     position: relative;
     float: left;
 }
+.home-area-left,
 .phonenav-left img{
     float: left;
     width: 235px;
-    height: 600px;
+    height: 610px;
 }
+.home-area-left,
 .phonenav-left:hover{
     top:-5px;
     transition: all .4s;
 }
-.pohonenav-gather{
-    height: 600px;
-    background-color: tan;
-}
-.phonenav-gather{
-    width: 230px;
+.home-product,
+.product-phone{
+    position: relative;
+    float: left;
+    display: block;
+    text-align: center;
+    width:234px ;
     height: 300px;
+    background-color: white;
+    margin-left: 13px;
+    margin-bottom: 10px;
+    transition: all .5s;
+}
+.home-area-left img:hover{
+    top: -2px;
+    box-shadow:0 20px 20px rgba(0, 0, 0, .2)
+}
+.home-product:hover{
+    top: -2px;
+    box-shadow:0 20px 20px rgba(0, 0, 0, .2)
+}
+.product-phone:hover{
+    top: -2px;
+    box-shadow:0 20px 20px rgba(0, 0, 0, .2)
+}
+.home-product img,
+.product-phone img{
+    margin-bottom: 15px;
+    margin-top: 15px;
+}
+.home-product h4,
+.product-phone h4{
+    margin-bottom: 8px;
+    font-weight: normal;
+    font-size: 14px;
+}
+.home-product p,
+.product-phone p{
+    margin-bottom: 15px;
+    font-size: 12px;
+    color: rgb(194,194,194);
+}
+.home-product span, 
+.product-phone span{
+    color: rgb(255,130,45);
+    font-size: 14px;
+}
+
+.background-home img{
+    margin-top: 25px;
+    width: 100%;
+}
+.home-title{
+    height: 45px;
+    line-height: 45px;
+    margin-top: 20px;
+}
+.home-title h3{
+    float: left;
+    font-size: 20px;
+    font-weight: 200;
+    color: rgb(51,51,51);
+}
+.home-size{
+    float: right;
+}
+.home-size a{
+    float: left;
+    font-size: 15px;
+    margin-left: 25px;
+}
+.home-size a:hover{
+    color: rgb(255,103,0);
+    border-bottom: 2px solid rgb(255,103,0);
+}
+.home-area-left{
+    float: left;
+    display:block ;
+
+    width: 234px;
+    height: 600px;
+}
+.home-area-left img{
+    margin-top: 10px;
+}
+.home-title{
+    margin-bottom: 10px;
+}
+
+
+
+.home-more .home-product{
+    margin-bottom: 10px;
+}
+.home-more div {
+    float: left;
+}
+.home-prodcut-more1{
+    position: relative;
+    width: 235px;
+    height: 140px;
+    margin-bottom: 18px;
+    margin-left: 13px;
+   display: inline-block;
+    background-color: white;
+    transition: all .5s;
+    
+}
+.home-prodcut-more1:hover{
+    top: -2px;
+    box-shadow: 0 10px 10px rgb(0,0,0,.2);
+}
+.home-prodcut-more2{
+    position: relative;
+    display: inline-block;
+    width: 235px;
+    height: 140px;
+    background-color: white;
+    margin-left: 13px;
+    transition: all .5s;
+}
+.home-prodcut-more2:hover{
+    top: -2px;
+    box-shadow: 0 10px 10px rgb(0,0,0,.2);
+}
+.home-prodcut-more1{
+    text-align: center;
+  
+}
+.home-prodcut-more1 img{
+    float:right;
+    width: 80px;
+    height: 80px;
+    margin-right: 10px;
+    margin-top: 26px;
+    
+}
+.home-prodcut-more1 h4{
+    margin-top: 42px;
+    font-weight: 200;
+    font-size: 14px;
+    margin-bottom: 10px;
+
+}
+.home-prodcut-more1 span{
+    font-size: 14px;
+    color: rgb(255,103,0);
+}
+.home-prodcut-more2 i{
+    float: right;
+    font-size: 45px;
+  color: rgb(255,103,0);
+  margin-top: 40px;
+  margin-right: 25px;
+}
+.home-prodcut-more2 h4{
+    font-size: 20px;
+    font-weight: 500;
+    margin-top: 45px;
+    margin-bottom: 10px;
+    margin-left: 48px;
+}
+.home-prodcut-more2 p{
+    margin-left: 50px;
+    font-size: 14px;
+    color: rgb(149,149,149);
+}
+/* 大盒子 */
+.intelligent{
+    height: 615px;
+}
+/* 广告栏 */
+.background-intelligent img,
+.background-home img,
+.background-phone img{
+    width: 100%;
+    height: 120px;
+}
+/* 标题栏 */
+.intelligent-title{
+    height: 58px;
+    line-height: 58px;
+}
+.intelligent-size{
+    float: right;
+}
+.intelligent-title h3{
+    float: left;
+    font-size: 22px;
+    font-weight: 200;
+    }
+.intelligent-size a{
+    float: left;
+    font-size: 16px;
+    margin-left: 25px;
+}
+.intelligent-size a:hover{
+    color: rgb(255,103,0);
+    border-bottom: 2px solid rgb(255,103,0);
+}
+/* 左侧栏 */
+.intelligent-left{
+    position: relative;
+    width: 234px;
+    height: 614px;
+    float: left;
+   
+}
+.intelligent-left img:hover{
+    top: -2px;
+box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+transition: all .5s;
+}
+.intelligent-left img{
+    
+    height: 300px;
+    margin-bottom: 15px;
+}
+/* 集合栏 */
+.intelligent-gather{
+    float: left;
+    width: 990px;
+}
+.intelligent-product{
+    position: relative;
+    display: block;
+    float: left;
+    width: 234px;
+    height: 300px;
+    background-color: white;
+    text-align: center;
+    margin-left: 13px;
+    margin-bottom: 15px;
+    transition: all .5s;
+}
+.intelligent-product:hover{
+    top: -2px;
+    box-shadow: 0 20px 20px rgba(0, 0, 0, .2);
+}
+.intelligent-product img{
+    width: 160px;
+    height: 160px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.intelligent-product h4{
+font-size:14px;
+font-weight: 400;
+margin-bottom: 10px;
+}
+.intelligent-product p{
+    margin-bottom: 15px;
+font-size: 12px;
+color: #Ccc;
+}
+.intelligent-product span{
+    font-size: 14px;
+color: rgb(255,103,0);
+}
+.box{
+    position: relative;
+    width: 234px;
+    height: 300px;
+    float: left;
+    transition: all .5s;
+
+}
+.box :hover{
+    top: -2px;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, .2);
+}
+.box-left{
+    float: left;
+
+
+}
+.box-right{
+    float: left;
+}
+
+.box a{
+    display: block;
+    background-color: #fff;
+    width: 234px;
+    height: 142.5px;
+    margin-bottom: 15px;
+    margin-left: 15px;
+}
+.box img{
+    width: 80px;
+    height: 80px;
+    float: right;
+    margin-right: 20px;
+    margin-top: 30px;
+}
+.box-left h4{
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 45px;
+    margin-left: 35px;
+    margin-bottom: 8px;
+}
+.box-left span{
+    margin-left: 35px;
+color: rgb(255,103,0);
+font-size: 12px;
+}
+.box-right h4{
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 45px;
+    margin-left: 50px;
+    margin-bottom: 8px;
+}
+.box-right p{
+    margin-left: 50px;
+    font-size: 12px;
+    color: #757575;
+}
+.box i{
+    float: right;
+    margin-right: 40px;
+    margin-top: 40px;
+    font-size: 45px;
+    color: rgb(255,103,0);
 }
