--- a/小米官网/lib/reset/reset.css
+++ b/小米官网/lib/reset/reset.css
@@ -19,3 +19,6 @@ del,ins,u,a,a:hover{text-decoration:none;}
 body,textarea,input,button,select,keygen,legend{font:12px/1.14 arial,"Microsoft YaHei";color:#333;outline:0;}
 body{background:#fff;}
 a,a:hover{color:#333;}
+img {
+    vertical-align: top;
+  }
